[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "taml"
version = "0.1.0"
authors = [
	{name="EpicStuff", email="EpicStuff@users.noreply.github.com"}
]
description = "YAML but with tabs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
dependencies = [
	"ruamel.yaml"
]

[project.urls]
Homepage = "https://github.com/EpicStuff/taml"
Issues = "https://github.com/EpicStuff/taml/issues"